        * The type of argument of Hash->new is changed. Sorry, this is merely my bad mistake. The type of value of hash is any object type.
          [Before]
          static method new : Hash ($key_values : element[]);
          
          [After]
          static method new : Hash ($key_values : object[]);
        * Remove oarray type that is deprecated at 0.9509.

0.9509  2021-03-23
        [DEPRECATIONS]
        * oarray type is deprecated. oarray type will be removed at 0.9510.
        [WARNINGS]
        * Interfaces and IDs of Native APIs that is added after 0.9506+(181+) will be changed many times.
          because I realize Native APIs that compile SPVM are not yet implemented correctly in tests.
        [BUG FIX]
        * Fix the bug that spvmcc can't detect the change of config file.
        [CHANGE]
        * Add element[] type. This is same as oarray type, but element[] type has correct type dimension.
        * Add Fn->is_numeric_array, Fn->is_mulnum_array doc.
        * Add Fn->is_object_array
        * Add is_object_array native API.
        * Native API get_elem_byte_size uses only runtime information
        * Native API has_callback uses only runtime information
        * Native API has_interface uses only runtime information
        * Separate compiler allocator and runtime allocator.
          The memory allocated at compile time is freed just before runtime.
        * Add get_method_id_without_signature native API.
        * Add get_constant_string_value native API.
        * Add compiler_build_runtime_info native API.
        * Rename compiler_build_runtime_info to compiler_build_runtime native API.
        * Change Native API "compiler_build_runtime" argument and return values.
        [NON BACKWORD COMPATIBLE CHANGES]
        * oarray type signature change from oarray to element[].
          For this reason, 0.9510 don't have binary compatibility of precompiled source from 0.9509