@@ -1,5 +1,5 @@
 class TestCase::CompileError::OArray::AssignNumericArray {
   static method error : void () {
-    my $obj_elems : element[] = new int[3];
+    my $obj_elems : object[] = new int[3];
   }
 }
